--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "clappr",
   "description": "An extensible media player for the web",
-  "version": "0.2.63",
+  "version": "0.2.63mac",
   "homepage": "https://github.com/Leandro%20Moreira/clappr",
   "authors": [
     "Globo.com"
@@ -35,7 +35,7 @@
     "eslint": "^3.1.0",
     "file-loader": "^0.9.0",
     "gulp": "^3.8.1",
-    "hls.js": "^0.5.45",
+    "hls.js": "^0.5.51",
     "html-loader": "^0.4.3",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.2",
