--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clappr",
-  "version": "0.2.63mac",
+  "version": "0.2.63mac06x",
   "description": "An extensible media player for the web",
   "main": "./dist/clappr.js",
   "browser": "./dist/clappr.min.js",
@@ -41,7 +41,7 @@
     "eslint": "^3.1.0",
     "file-loader": "^0.9.0",
     "gulp": "^3.8.1",
-    "hls.js": "^0.5.51",
+    "hls.js": "^0.6.6",
     "html-loader": "^0.4.3",
     "isparta": "^4.0.0",
     "istanbul": "^0.4.2",
